# os-labs

lab1/: dedup.cpp  dedup.h  dedup_and_search_main.cpp  dedup_main.cpp  main.cpp  random_numbers256.py  searchName.cpp  searchName.h  search_name_main.cpp  shell.cpp  shell.h
lab2/: .gitignore  CMakeLists.txt  dedup.cpp  dedup.h  main.cpp  random_cache.cpp  random_cache.h
